leave type page layout done

--- a/views/Employees.ejs
+++ b/views/Employees.ejs
@@ -27,8 +27,8 @@
     </div>
 
     
-    <div class="d-flex filterContainer rounded-1 gap-3">
-        <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add new</a>
+    <div class="d-flex filterContainer rounded-1 gap-3 justify-content-center">
+        <a id="btnAdd" href="/admin/employees/new" class="btn btn-primary">Add New Employee</a>
     </div>
     <%-include('partials/Modal') %> 
     
