created routes for employee portal, completed layour for admin leave, initiation of initial portal layout

--- a/views/employeeHome.ejs
+++ b/views/employeeHome.ejs
@@ -98,7 +98,7 @@
 </style>
 <main class="d-flex flex-nowrap" style=" height: 100vh; overflow: hidden; align-self: center;">
 
-    <%-include('partials/Aside')%> 
+    <%-include('partials/employeeAside')%> 
 <div class="d-flex flex-column flex-fill" style="border-left: 1px solid #dddddd; padding: 1.5em 2em 1.5em 2em">
     <div class="d-flex justify-content-between"> 
             <div class="d-flex justify-content-center align-items-center rounded-1"> 
