time attendance bug issues like rfid and id code was not recognized has been fixed.

--- a/views/timeAttendance.ejs
+++ b/views/timeAttendance.ejs
@@ -43,6 +43,7 @@
                 <label for="" class="labelMessage">BFAR EMS</label> 
             </div>
             <label for="" class="timeType"></label>
+            <label for="" hidden class="inputType"></label>
         </div>
         </form>
         
