employee is now able to request for leave via leave form

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -47,6 +47,10 @@ p.error{
     background-color: #FFFEFE;
 }
 
+#modalForm select{
+    width: 100%;
+}
+
 input, .form-control, input:focus, .form-control:focus{
     outline-color: #656488;
     color: #656488;
