--- a/views/employeeLeave.ejs
+++ b/views/employeeLeave.ejs
@@ -104,7 +104,7 @@
     </div>
     <%-include('partials/Modal') %> 
     <div class="d-flex filterContainer rounded-1 gap-3 justify-content-center">
-        <a id="btnAdd" href="#" data-toggle="modal" data-target="#modal"  onclick="editModal('21312321321','kenwu', 'name amount', `<%=include('partials/bodies/leaveRequest-editbody')%>`)" class="btn btn-primary">Request for Leave</a>
+        <a id="btnAdd" href="#" data-toggle="modal" data-target="#modal"  onclick="submitModal('63cb6da923cd4215c1ee0e5e','John Kenneth Singson Gervacio', 'doc_id emp_id name leave_type leave_reason start_date end_date', `<%=include('partials/bodies/leaveRequest-editbody')%>`)" class="btn btn-primary">Request for Leave</a>
     </div>
 
     <div class="d-flex overflow-auto  table-container" style="margin-top: 25px !important; min-width:1200px;"> 
