--- a/views/Login.ejs
+++ b/views/Login.ejs
@@ -40,7 +40,7 @@
                     <a href="#">Forgot Password?</a>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">SIGN IN</button>
+            <button type="submit" id="admin" class="btn btn-primary">SIGN IN</button>
         </form>
 
 
