--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -55,7 +55,7 @@
       </li>
       <li>
         <hr>
-        <a href="/admin/leave" class="nav-link <%=(url.toLowerCase().includes('/leave'))?'active':''%>">
+        <a href="/admin/leavetypes" class="nav-link <%=(url.toLowerCase().includes('/leavetypes'))?'active':''%>">
           Leave Types
         </a>
       </li>
