add acount modal

--- a/views/Payroll.ejs
+++ b/views/Payroll.ejs
@@ -30,7 +30,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_morate%></b></p>
+              <p style="font-size:1.5rem;"><b>P</b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -40,7 +40,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Semi-Monthly Salary</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_semimorate%></b></p>
+              <p style="font-size:1.5rem;"><b>P</b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -50,7 +50,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
         <div class="d-flex flex-column justify-content-around">
            <p>Deduction</p>
-           <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_deductions%></b></p>
+           <p style="font-size:1.5rem;"><b>P</b></p>
         </div>
         <div class="d-flex">
            <p></p>
@@ -60,7 +60,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Gross Pay</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_grosspay%></b></p>
+              <p style="font-size:1.5rem;"><b>P</b></p>
            </div>
            <div class="d-flex">
               <p></p>
@@ -70,7 +70,7 @@
       <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
            <div class="d-flex flex-column justify-content-around">
               <p>Net Pay</p>
-              <p style="font-size:1.5rem;"><b>P<%=(!data.data[0]) ? 0 : data.data[0].total_netpay%></b></p>
+              <p style="font-size:1.5rem;"><b></b></p>
            </div>
            <div class="d-flex">
               <p></p>
