client's attendance data displayed

--- a/views/partials/employeeAside.ejs
+++ b/views/partials/employeeAside.ejs
@@ -17,7 +17,7 @@
       </li>
       <hr>
       <li>
-        <a href="/employee/attendances" class="nav-link <%=(url.toLowerCase().includes('/attendance'))?'active':''%> ">
+        <a href="/employee/attendance/<%=employee.employee_details.designation.id%>" class="nav-link <%=(url.toLowerCase().includes('/attendance'))?'active':''%> ">
           Attendances
         </a>
       </li>
